# huilin-jian1

./: CMakeLists.txt  README.md  build_and_run.sh  corelcore_types.h  engine.h  main.c  scenes
core/: camera.c  camera.c   camera.h  camera.h   core_types.h  file.c   file.h   json.c   json.h  math.c  math.c   math.h  math.h   render.h  scene.c   scene.h 
docs/: ARCHITECTURE.md
engine/: engine.c  engine.c   engine.h  renderer.c
